Issue #6 : Doc pour les invitation
